# chgk_irt

./: .gitignore  .gitmodules  GD.ipynb  Vectorized SGD.ipynb  difficulties.pickle  kr.ipynb  multiprocessing.ipynb  preprocessing.ipynb  pyproject.toml  qus_dif.csv  results.pickle  shared_vars.py  skills.pickle
.github/ISSUE_TEMPLATE/: bug_report.md
notebooks/: Calculation.ipynb
old_files/: Vectorized SGD.ipynb  preprocessing.ipynb  results.pickle  skills.pickle  tournaments.csv  utils.py
